Fix alignment of Facebook like buttons.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,3 +32,7 @@
 .neuter-paragraphs > p:last-child {
   @extend .omega;
 }
+
+.fb-like {
+  top: -7px;
+}
